fix behavior for update - use specific read functions

--- a/qsbi/crud/sql/_codegen/templates/crud_module.j2
+++ b/qsbi/crud/sql/_codegen/templates/crud_module.j2
@@ -1,3 +1,4 @@
+from typing import Tuple
 from qsbi.backend.sql.models.{{ module }} import {{ classname }} as Model
 from qsbi.api.schemas.{{ module }} import {{ classname }} as Schema
 from qsbi.api.schemas.{{ module }} import {{ classname }}Dict as Dict
