session depency only in this module

--- a/qsbi/crud/sql/_codegen/templates/crud_module.j2
+++ b/qsbi/crud/sql/_codegen/templates/crud_module.j2
@@ -1,7 +1,6 @@
 from typing import Tuple
 from qsbi.backend.sql.models.{{ module }} import {{ classname }} as Model
 from qsbi.api.schemas.{{ module }} import {{ classname }} as Schema
-from qsbi.api.schemas.{{ module }} import {{ classname }}Dict as Dict
 from qsbi.api.schemas.{{ module }} import {{ classname }}Create as Create
 from qsbi.api.schemas.{{ module }} import {{ classname }}Read as Read
 from qsbi.api.schemas.{{ module }} import {{ classname }}Update as Update
@@ -9,7 +8,7 @@ from qsbi.api.schemas.{{ module }} import {{ classname }}Delete as Delete
 
 from .base import SQLCRUDBase
 
-class SQLCRUD{{ classname }}(SQLCRUDBase[Model, Schema, Dict, Create, Update, Read, Delete]):
+class SQLCRUD{{ classname }}(SQLCRUDBase[Model, Schema, Create, Update, Read, Delete]):
 {%- if specific is not none %}
 {%- for spec in specific %}
 {%- include "%s" % spec %}  
@@ -18,5 +17,5 @@ class SQLCRUD{{ classname }}(SQLCRUDBase[Model, Schema, Dict, Create, Update, Re
     ...
 {%- endif %}
 
-sql_crud_{{ module }} = SQLCRUD{{ classname }}(Model, Schema, Dict, Create, Update, Read, Delete)
+sql_crud_{{ module }} = SQLCRUD{{ classname }}(Model, Schema, Create, Update, Read, Delete)
 
